# papervisor

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  ENHANCED_TEXT_EXTRACTION.md  LICENSE  README.md  RETRY_EXTRACTION_FEATURE.md  launch_server_simple.sh  launch_web_server.sh  pyproject.toml  start_server.sh  test_text_extraction.py  vulture_whitelist.py
.github/workflows/: ci.yml
data/: projects_index.yaml
data/literature_reviews/demo_contact_center_ai/: README.md  extraction_status.json  search_queries.yaml
data/literature_reviews/demo_contact_center_ai/analysis/: preliminary_analysis.md
data/literature_reviews/demo_contact_center_ai/pdfs/: README.md  consolidated_papers.csv
data/literature_reviews/demo_contact_center_ai/pdfs/automatic/reports/: download_log.txt
data/literature_reviews/demo_contact_center_ai/pdfs/extracted_texts/: 0_li_2018_predicting_call_center.json  1_ali_2011_intelligent_call_routing.json  brown_2020_ai_survey.txt  chen_2023_realtime_ai_decisions.txt  kumar_2023_agent_scheduling_drl.txt  martinez_2022_optimization_review.txt  zhang_2021_resource_allocation.txt
data/literature_reviews/demo_contact_center_ai/reports/: executive_summary.md
data/literature_reviews/demo_contact_center_ai/results/: q1.csv  q2.csv
data/literature_reviews/qplanner_literature_review/: extraction_status.json  search_queries.yaml
data/literature_reviews/qplanner_literature_review/results/: lit-review-results-q1.csv  lit-review-results-qplanner-q2.csv  lit-review-results-qplanner-q5.csv  q1.csv  q10.csv  q2.csv  q3.csv  q4.csv  q5.csv  q6.csv  q7.csv  q8.csv  q9.csv
reports/: complexity.txt  maintainability.txt  raw.txt
scripts/: complexity_gate.sh
src/papervisor/: __init__.py  __main__.py  cli.py  core.py  data_loader.py  pdf_downloader.py  project_manager.py  search_query.py  web_server.py
src/papervisor/templates/: base.html  dashboard.html  error.html  landing.html  review_papers.html  screening.html  text_extraction.html
tests/: conftest.py  test_basic.py  test_pdf_downloader.py
tests/data/: projects_index.yaml
tests/data/literature_reviews/test_project/: search_queries.yaml
tests/data/literature_reviews/test_project/results/: test_results_1.csv  test_results_2.csv
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_core_integration.py  test_webserver_dummy_project.py
tests/integration/data/: projects_index.yaml
tests/integration/data/literature_reviews/test_project/: query1.csv  query2.csv  search_queries.yaml
tests/integration/data/literature_reviews/test_project/results/: query1.csv  query2.csv
tests/unit/: __init__.py  test_data_loader.py  test_pdf_downloader.py  test_project_manager.py
tests/web/: __init__.py  test_projects_page.py  test_web_landing.py
